does not get to record reader..using holden's test framework.. nothing happens ;^(